--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-scroll": "^1.8.1",
     "redux": "^4.0.5",
     "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
