--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.10.3",
+    "axios": "^0.21.1",
+    "chart.js": "^2.9.4",
     "ethers": "^5.0.26",
     "less": "^4.1.0",
     "less-loader": "^7.2.1",
